--- a/html/messages.gohtml
+++ b/html/messages.gohtml
@@ -1,14 +1,35 @@
+<!DOCTYPE html>
 <html>
-  <body>
-    <form action="/send" method="post">
-      <input type="text" id="message" name="message">
-      <input type="submit" value="Send">
-    </form>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Chat Demo</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
+</head>
 
-    {{ range . }}
-      <h5>{{ . }}</h5>
-    {{ end }}
+<body>
+  <section class="section">
+      <form action="/send" method="post">
+        <div class="field">
+          <p class="control">
+            <input class="input" type="text" name="message">
+          </p>
+        </div>
+        <div class="field">
+          <p class="control">
+            <input class="button" type="submit" value="Send">
+          </p>
+        </div>
+      </form>
 
-  </body>
+      <hr/>
+
+      {{ range . }}
+        <h5 class="title is-5">{{ . }}</h5>
+      {{ end }}
+
+  </section>
+</body>
+
 </html>
